try to debug by porting to js

--- a/js.html
+++ b/js.html
@@ -3,11 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>WASM Test</title>
+        <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
+        <script src="test.js"></script>
     </head>
     <body style="margin: 0;">
-        <script type="module">
-            import init from "./pkg/wasmtest.js";
-            init();
-        </script>
     </body>
 </html>
