--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>WASM Test</title>
-        <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
-        <script src="test.js"></script>
     </head>
     <body style="margin: 0;">
+        <script type="module">
+            import init from "./pkg/client.js";
+            init();
+        </script>
     </body>
 </html>
