--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>WASM Test</title>
     </head>
-    <body style="margin: 0;">
+    <body style="margin: 0; overflow: hidden;">
         <script type="module">
             import init from "./pkg/client.js";
             init();
