start working on web front end

--- a/client/web/scene.html
+++ b/client/web/scene.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
-        <title>WASM Test</title>
+        <title>Scene</title>
     </head>
     <body style="margin: 0; overflow: hidden;">
         <script type="module">
