add login page, use Strict cookies with a Max-Age

--- a/client/web/login.html
+++ b/client/web/login.html
@@ -10,28 +10,20 @@
 
     <script src="form.js"></script>
 
-    <title>Register</title>
+    <title>Login</title>
   </head>
   <body>
     <div class="container-sm p-5">
-      <form class="needs-validation" onsubmit="return false;" action="/register" data-redirect="login.html">
+      <form class="needs-validation" onsubmit="return false;" action="/login", data-redirect="scene.html">
         <div class="mb-3">
           <label for="username" class="form-label">Username</label>
           <input type="text" class="form-control" id="username" aria-describedby="username_help" required="" minlength="4" maxlength="32">
-          <div id="username_help" class="form-text">Your username must be 4-32 alphanumeric characters.</div>
-          <div class="invalid-feedback">Please choose a valid username.</div>
+          <div class="invalid-feedback" data-feedback-for="username">Please enter a valid username.</div>
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">Password</label>
           <input type="password" class="form-control" id="password" aria-describedby="password_help" required="" minlength="8" maxlength="256">
-          <div id="password_help" class="form-text">Your password must be 8 or more characters, including at least one number and one letter.</div>
-          <div class="invalid-feedback">Please choose a valid password.</div>
-        </div>
-        <div class="mb-3">
-          <label for="confirm_password" class="form-label">Confirm Password</label>
-          <input type="password" class="form-control" id="confirm_password" aria-describedby="confirm_password_help" required="">
-          <div id="confirm_password_help" class="form-text">Must match your password.</div>
-          <div class="invalid-feedback">Please type you password again.</div>
+          <div class="invalid-feedback" data-feedback-for="password">Please enter a valid password.</div>
         </div>
         <button onclick="submit_form(this.parentNode);" class="btn btn-primary">Submit</button>
         <div id="error_message" class="form-text danger"></div>
