clean up some rough edges on previous commit

--- a/client/web/login.html
+++ b/client/web/login.html
@@ -26,7 +26,7 @@
           <div class="invalid-feedback" data-feedback-for="password">Please enter a valid password.</div>
         </div>
         <button onclick="submit_form(this.parentNode);" class="btn btn-primary">Submit</button>
-        <div id="error_message" class="form-text danger"></div>
+        <div id="error_message" class="form-text text-danger"></div>
       </form>
     </div>
   </body>
