--- a/client/web/pages/login.html
+++ b/client/web/pages/login.html
@@ -1,15 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <script src="form.js"></script>
-
+    {{ head_common.html }}
+    <script>{{ form.js }}</script>
     <title>Login</title>
   </head>
   <body>
@@ -17,12 +10,12 @@
       <form class="needs-validation" onsubmit="return false;" action="/login", data-redirect="scene.html">
         <div class="mb-3">
           <label for="username" class="form-label">Username</label>
-          <input type="text" class="form-control" id="username" aria-describedby="username_help" required="" minlength="4" maxlength="32">
+          <input type="text" class="form-control" id="username" required="" minlength="4" maxlength="32">
           <div class="invalid-feedback" data-feedback-for="username">Please enter a valid username.</div>
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" aria-describedby="password_help" required="" minlength="8" maxlength="256">
+          <input type="password" class="form-control" id="password" required="" minlength="8" maxlength="256">
           <div class="invalid-feedback" data-feedback-for="password">Please enter a valid password.</div>
         </div>
         <button onclick="submit_form(this.parentNode);" class="btn btn-primary">Submit</button>
