keep working on frontend, preprocessor

--- a/client/web/pages/register.html
+++ b/client/web/pages/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {{ head_common.html }}
-    <script src="form.js"></script>
+    <script>{{ form.js }}</script>
     <title>Register</title>
   </head>
   <body>
