--- a/client/web/pages/scene.html
+++ b/client/web/pages/scene.html
@@ -5,15 +5,6 @@
         <meta charset="utf-8">
         <title>Scene</title>
         <style>
-          #show_offcanvas {
-            left: 0.5em;
-            top: 0.5em;
-          }
-
-          #offcanvas_left {
-            width: 500px;
-          }
-
           .status-indicator {
             width: 1.25em;
             height: 1.25em;
@@ -31,18 +22,70 @@
         </script>
         <canvas id="canvas" tabindex="-1"></canvas>
         <div class="position-absolute" id="show_offcanvas" style="left: 0.5em; top: 0.5em;">
-          <button class="btn btn-dark btn-sm shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas_left" aria-controls="offcanvas_left">
+          <button
+            class="btn btn-dark btn-sm shadow-none"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvas_left"
+            aria-controls="offcanvas_left"
+          >
             Media {{ bootstrap_icon(chevron-right) }}
           </button>
         </div>
-        <div class="offcanvas offcanvas-start" tabindex="-2" id="offcanvas_left" aria-labelledby="offcanvas_left_label">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvas_left_label">Media</h5>
-                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-              <div>
-                <label for="media_upload" class="form-label">Upload media</label>  
+        <div
+          class="offcanvas offcanvas-start"
+          tabindex="-2"
+          id="offcanvas_left"
+          aria-labelledby="offcanvas_left_label"
+          style="width: 500px"
+        >
+          <div class="offcanvas-header">
+              <h2 class="offcanvas-title" id="offcanvas_left_label">Media</h4>
+              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close">
+              </button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="nav nav-tabs mb-2" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link active"
+                  id="view_media_tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#view_media"
+                  type="button"
+                  role="tab"
+                  aria-controls="view_media"
+                  aria-selected="true"
+                >View</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link"
+                  id="upload_media_tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#upload_media"
+                  type="button"
+                  role="tab"
+                  aria-controls="upload_media"
+                  aria-selected="true"
+                >Upload</button>
+              </li>
+            </ul>  
+            <div class="tab-content">
+              <div
+                class="tab-pane fade show"
+                id="view_media"
+                role="tabpanel"
+                aria-labelledby="view_media_tab"
+              >
+              </div>
+              <div
+                class="tab-pane fade show"
+                id="upload_media"
+                role="tabpanel"
+                aria-labelledby="upload_media_tab"
+              >
+                <h3 class="p-2">Upload media</h3>  
                 <input class="form-control" type="file" id="media_upload" accept="image/png,image/jpg" multiple>
                 <div class="row row-cols-3" id="media_upload_previews"></div>
                 <div class="row p-1 pt-2 gx-2">
@@ -50,6 +93,7 @@
                 </div>
               </div>
             </div>
+          </div>
         </div>
         {{ boostrap_js.html }}
     </body>
