--- a/client/web/pages/login.html
+++ b/client/web/pages/login.html
@@ -19,7 +19,7 @@
           <div class="invalid-feedback" data-feedback-for="password">Please enter a valid password.</div>
         </div>
         <button onclick="submit_form(this.parentNode);" class="btn btn-primary">Submit</button>
-        <div id="error_message" class="form-text text-danger"></div>
+        <div data-role="error_message" class="form-text text-danger"></div>
       </form>
     </div>
   </body>
