split scene into multiple files, update build script to support loading files in script tags

--- a/client/web/pages/login.html
+++ b/client/web/pages/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {{ head_common.html }}
-    <script>{{ form.js }}</script>
+    {{ javascript(form.js) }}
     <title>Login</title>
   </head>
   <body>
