--- a/web/pages/scene.html
+++ b/web/pages/scene.html
@@ -30,9 +30,9 @@
           init();
         </script>
         <canvas id="canvas" tabindex="-1"></canvas>
-        <div class="position-absolute" id="show_offcanvas" style="left: 0.5em; top: 0.5em;">
+        <div class="position-absolute btn-group-vertical" id="show_offcanvas" style="left: 0.5em; top: 0.5em;">
           <button
-            class="btn btn-dark btn-sm shadow-none"
+            class="btn btn-secondary btn-sm shadow-none"
             type="button"
             data-bs-toggle="offcanvas"
             data-bs-target="#media_offcanvas"
@@ -40,8 +40,18 @@
           >
             Media {{ bootstrap_icon(chevron-right) }}
           </button>
+          <button
+            class="btn btn-secondary btn-sm shadow-none"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#game_offcanvas"
+            aria-controls="game_offcanvas"
+          >
+            Game {{ bootstrap_icon(chevron-right) }}
+          </button>
         </div>
         {{ scene/media/media_offcanvas.html }}
+        {{ scene/game/game_offcanvas.html }}
         {{ boostrap_js.html }}
         {{ javascript(form.js) }}
     </body>
