add layer model, game joining js

--- a/web/pages/scene.html
+++ b/web/pages/scene.html
@@ -52,7 +52,7 @@
         </div>
         {{ scene/media/media_offcanvas.html }}
         {{ scene/game/game_offcanvas.html }}
-        {{ boostrap_js.html }}
+        {{ bootstrap_js.html }}
         {{ javascript(form.js) }}
     </body>
 </html>
