get scene uploads working

--- a/web/pages/login.html
+++ b/web/pages/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {{ head_common.html }}
-    {{ javascript(form.js) }}
+    {{ javascript(common.js) }}
     <title>Login</title>
   </head>
   <body>
