--- a/web/pages/scene.html
+++ b/web/pages/scene.html
@@ -63,6 +63,6 @@
         {{ scene/game/game_offcanvas.html }}
         {{ scene/project/project_offcanvas.html }}
         {{ bootstrap_js.html }}
-        {{ javascript(form.js) }}
+        {{ javascript(common.js) }}
     </body>
 </html>
