--- a/web/pages/scene.html
+++ b/web/pages/scene.html
@@ -25,6 +25,7 @@
         </script>
     </head>
     <body style="margin: 0; overflow: hidden;">
+        {{ javascript(rust_interface.js) }}
         <script type="module">
           import init from "./pkg/client.js";
           init();
