allow deletion of layers

--- a/web/pages/scene.html
+++ b/web/pages/scene.html
@@ -31,6 +31,7 @@
           {{ offcanvas_button(target=project) }}
         </div>
         {{ scene/layers/layers_list.html }}
+        {{ confirmation_modal.html }}
         {{ scene/media/media_offcanvas.html }}
         {{ scene/game/game_offcanvas.html }}
         {{ scene/project/project_offcanvas.html }}
