start working on sprite context menu

--- a/web/pages/scene.html
+++ b/web/pages/scene.html
@@ -23,9 +23,11 @@
         <canvas
           id="canvas"
           class="bg-light"
+          style="z-index: 0;"
           tabindex="-1"
           oncontextmenu="return false;"
         ></canvas>
+        {{ scene/layers/canvas_dropdown.html }}
         <div
           class="position-absolute btn-group-vertical"
           id="show_offcanvas"
