--- a/web/pages/register.html
+++ b/web/pages/register.html
@@ -1,39 +1,30 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    {{ head_common.html }}
-    <title>Register</title>
-  </head>
-  <body>
-    <div class="container-sm p-5">
-      {{ form/start(action=/register, redirect=login.html) }}
-        {{
-          form/field(
-            id=username,
-            min_length=4,
-            max_length=32,
-            help="Your username must be 4-32 alphanumeric characters."
-          )
-        }}
-        {{
-          form/field(
-            id=password,
-            type=password,
-            min_length=8,
-            help="Your password must be 8 or more characters including at least one number and one letter."
-          )
-        }}
-        {{
-          form/field(
-            id=confirm_password,
-            type=password,
-            field_name="Confirm password",
-            min_length=8,
-            help="Must match your password.",
-            feedback_text="Please type your password again."
-          )
-        }}
-      {{ form/end() }}
-    </div>
-  </body>
-</html>
+{{ page/start(title="Register") }}
+  {{ form/start(action=/register, redirect=login.html, title="Register") }}
+    {{
+      form/field(
+        id=username,
+        min_length=4,
+        max_length=32,
+        help="Your username must be 4-32 alphanumeric characters."
+      )
+    }}
+    {{
+      form/field(
+        id=password,
+        type=password,
+        min_length=8,
+        help="Your password must be 8 or more characters including at least one number and one letter."
+      )
+    }}
+    {{
+      form/field(
+        id=confirm_password,
+        type=password,
+        field_name="Confirm password",
+        min_length=8,
+        help="Must match your password.",
+        feedback_text="Please type your password again."
+      )
+    }}
+  {{ form/end(text=|Already have an account? <a href="/login">Log in</a>.|) }}
+{{ page/end() }}
