--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
       <div class="col-sm-4 text-center pt-5">
         <h1>
-          <a href="/register">Register</a> or <a href="/login">Login</a>
+          <a href="/register">Register</a> or <a href="/login">Log In</a>
         </h1>
       </div>
     </div>
