--- a/web/pages/register.html
+++ b/web/pages/register.html
@@ -3,7 +3,7 @@
     {{
       form/field(
         id=username,
-        props='min_length="4" max_length="32"'
+        props='min_length="4" max_length="32"',
         help="Your username must be 4-32 alphanumeric characters."
       )
     }}
@@ -20,7 +20,7 @@
         id=confirm_password,
         type=password,
         field_name="Confirm password",
-        props='minlength="8"'
+        props='minlength="8"',
         help="Must match your password.",
         feedback_text="Please type your password again."
       )
