fix up media modal

--- a/web/pages/media.html
+++ b/web/pages/media.html
@@ -1,4 +1,4 @@
-{{ page/start() }}
+{{ page/start(title="Media") }}
   <div class="container-fluid py-2">{{ media/main() }}</div>
   {{ confirmation_modal.html }}
   {{ bootstrap_js.html }}
