html style kwarg includes

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -1,4 +1,4 @@
-{{ page/start() }}
+<Page>
   <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-sm-4 text-center pt-5">
@@ -8,4 +8,4 @@
       </div>
     </div>
   </div>
-{{ page/end() }}
+</Page>
