--- a/web/pages/media.html
+++ b/web/pages/media.html
@@ -1,5 +1,5 @@
-{{ page/start(title="Media") }}
-  <div class="container-fluid py-2">{{ media/main() }}</div>
-  {{ confirmation_modal.html }}
-  {{ bootstrap_js.html }}
-{{ page/end() }}
+<Page title="Media">
+  <div class="container-fluid py-2"><MediaMain></div>
+  <File name="confirmation_modal">
+  <File name="bootstrap_js">
+</Page>
