clean up media library

--- a/web/pages/media.html
+++ b/web/pages/media.html
@@ -1,5 +1,7 @@
 <Page title="Media">
-  <div class="container-fluid py-2"><MediaMain></div>
+  <div class="container-fluid py-2">
+    <MediaMain class="col-lg-4 pt-5">
+  </div>
   <File name="confirmation_modal">
   <File name="bootstrap_js">
 </Page>
