--- a/web/pages/register.html
+++ b/web/pages/register.html
@@ -17,7 +17,7 @@
       type="password"
       minlength="8"
       help="Must match your password."
-      feedback_text="Please type your password again."
+      feedback="Please type your password again."
     >
   </Form text="Already have an account? <a href='/login'>Log in</a>.">  
 </Page>
