--- a/web/pages/scene.html
+++ b/web/pages/scene.html
@@ -32,7 +32,7 @@
         </div>
         {{ scene/menu/menu.html }}
         {{ confirmation_modal.html }}
-        {{ media/media_offcanvas.html }}
+        {{ media/offcanvas.html }}
         {{ scene/game/game_offcanvas.html }}
         {{ scene/project/project_offcanvas.html }}
         {{ bootstrap_js.html }}
