implement deleting projects and scenes

--- a/web/pages/project.html
+++ b/web/pages/project.html
@@ -1,6 +1,6 @@
 <Page title="Projects">
-  <div id="project_list" class="container-fluid">
-
-  </div>
+  <div id="project_list" class="container-fluid"></div>
+  <ConfirmationModal />
+  <BootstrapJs />
   <Js src="project/project.js">
 </Page>
