improve header, add log out

--- a/web/pages/media.html
+++ b/web/pages/media.html
@@ -1,4 +1,4 @@
-<Page title="Media">
+<Page title="Media" loggedin="">
   <div class="container-fluid py-2">
     <MediaMain class="col-lg-4 pt-5">
   </div>
