--- a/web/pages/project.html
+++ b/web/pages/project.html
@@ -1,4 +1,4 @@
-<Page title="Projects">
+<Page title="Projects" loggedin="">
   <div id="project_list" class="container-fluid"></div>
   <ConfirmationModal />
   <BootstrapJs />
