--- a/web/pages/projects.html
+++ b/web/pages/projects.html
@@ -4,6 +4,7 @@
       <div
         id="new_prompt"
         class="row justify-content-center align-items-center"
+        style="height: 50vh;"
       >
         <div class="col-sm-3 d-flex flex-column justify-content-end">
           <p
